--- a/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
+++ b/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
@@ -77,20 +77,20 @@
     <Compile Include="Decoding\Candidates\CandidateRoute.cs" />
     <Compile Include="Decoding\Candidates\CandidateVertexEdge.cs" />
     <Compile Include="Decoding\Candidates\CandidateVertexEdgeComparer.cs" />
-    <Compile Include="Decoding\ReferencedCircle.cs" />
+    <Compile Include="Locations\ReferencedCircle.cs" />
     <Compile Include="Decoding\ReferencedCircleDecoder.cs" />
-    <Compile Include="Decoding\ReferencedGeoCoordinate.cs" />
+    <Compile Include="Locations\ReferencedGeoCoordinate.cs" />
     <Compile Include="Decoding\ReferencedGeoCoordinateDecoder.cs" />
     <Compile Include="Decoding\ReferencedDecoder.cs" />
-    <Compile Include="Decoding\ReferencedGrid.cs" />
+    <Compile Include="Locations\ReferencedGrid.cs" />
     <Compile Include="Decoding\ReferencedGridDecoder.cs" />
-    <Compile Include="Decoding\ReferencedLine.cs" />
+    <Compile Include="Locations\ReferencedLine.cs" />
     <Compile Include="Decoding\ReferencedLineDecoder.cs" />
-    <Compile Include="Decoding\ReferencedPointAlongLine.cs" />
+    <Compile Include="Locations\ReferencedPointAlongLine.cs" />
     <Compile Include="Decoding\ReferencedPointAlongLineDecoder.cs" />
-    <Compile Include="Decoding\ReferencedPolygon.cs" />
+    <Compile Include="Locations\ReferencedPolygon.cs" />
     <Compile Include="Decoding\ReferencedPolygonDecoder.cs" />
-    <Compile Include="Decoding\ReferencedRectangle.cs" />
+    <Compile Include="Locations\ReferencedRectangle.cs" />
     <Compile Include="Decoding\ReferencedRectangleDecoder.cs" />
     <Compile Include="Decoding\Scoring\CombinedScoreComparer.cs" />
     <Compile Include="Decoding\Scoring\CombinedScore.cs" />
@@ -107,6 +107,9 @@
       <Project>{036ad1da-006a-48b6-826c-83d12561411d}</Project>
       <Name>OpenLR</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Encoding\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
