Updated OsmSharp to latest daily build.

--- a/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
+++ b/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
@@ -36,25 +36,40 @@
     <Reference Include="NetTopologySuite">
       <HintPath>..\packages\NetTopologySuite.1.13.2\lib\net403-client\NetTopologySuite.dll</HintPath>
     </Reference>
-    <Reference Include="OsmSharp, Version=4.2.0.723, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="OsmSharp, Version=4.2.0.754, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\flowpilots_latests\Output\Debug\Any CPU\OsmSharp.dll</HintPath>
+      <HintPath>..\packages\OsmSharp.4.2.0.754\lib\net45\OsmSharp.dll</HintPath>
     </Reference>
-    <Reference Include="OsmSharp.Osm, Version=4.2.0.723, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\flowpilots_latests\Output\Debug\Any CPU\OsmSharp.Osm.dll</HintPath>
+    <Reference Include="OsmSharp.Data.Oracle">
+      <HintPath>..\packages\OsmSharp.4.2.0.754\lib\net45\OsmSharp.Data.Oracle.dll</HintPath>
     </Reference>
-    <Reference Include="OsmSharp.Routing, Version=4.2.0.723, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\flowpilots_latests\Output\Debug\Any CPU\OsmSharp.Routing.dll</HintPath>
+    <Reference Include="OsmSharp.Data.PostgreSQL">
+      <HintPath>..\packages\OsmSharp.4.2.0.754\lib\net45\OsmSharp.Data.PostgreSQL.dll</HintPath>
     </Reference>
-    <Reference Include="OsmSharp.UI, Version=4.2.0.723, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\flowpilots_latests\Output\Debug\Any CPU\OsmSharp.UI.dll</HintPath>
+    <Reference Include="OsmSharp.Data.Redis">
+      <HintPath>..\packages\OsmSharp.4.2.0.754\lib\net45\OsmSharp.Data.Redis.dll</HintPath>
     </Reference>
-    <Reference Include="OsmSharp.WinForms.UI, Version=4.2.0.723, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="OsmSharp.Data.SQLite">
+      <HintPath>..\packages\OsmSharp.4.2.0.754\lib\net45\OsmSharp.Data.SQLite.dll</HintPath>
+    </Reference>
+    <Reference Include="OsmSharp.Data.SQLServer">
+      <HintPath>..\packages\OsmSharp.4.2.0.754\lib\net45\OsmSharp.Data.SQLServer.dll</HintPath>
+    </Reference>
+    <Reference Include="OsmSharp.Osm, Version=4.2.0.754, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\flowpilots_latests\Output\Debug\Any CPU\OsmSharp.WinForms.UI.dll</HintPath>
+      <HintPath>..\packages\OsmSharp.4.2.0.754\lib\net45\OsmSharp.Osm.dll</HintPath>
+    </Reference>
+    <Reference Include="OsmSharp.Routing, Version=4.2.0.754, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\OsmSharp.4.2.0.754\lib\net45\OsmSharp.Routing.dll</HintPath>
+    </Reference>
+    <Reference Include="OsmSharp.UI, Version=4.2.0.754, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\OsmSharp.4.2.0.754\lib\net45\OsmSharp.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="OsmSharp.WinForms.UI, Version=4.2.0.754, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\OsmSharp.4.2.0.754\lib\net45\OsmSharp.WinForms.UI.dll</HintPath>
     </Reference>
     <Reference Include="PowerCollections">
       <HintPath>..\packages\NetTopologySuite.1.13.2\lib\net403-client\PowerCollections.dll</HintPath>
