--- a/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
+++ b/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
@@ -115,8 +115,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReferencedDecoderBase.cs" />
     <Compile Include="ReferencedEncoderBase.cs" />
-    <Compile Include="ReferencedLiveEdgeDecoder.cs" />
-    <Compile Include="ReferencedLiveEdgeEncoder.cs" />
+    <Compile Include="Osm\ReferencedOsmDecoder.cs" />
+    <Compile Include="Osm\ReferencedOsmEncoder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
