Added shared assembly version file.

--- a/OpenLR.Binary/OpenLR.Binary.csproj
+++ b/OpenLR.Binary/OpenLR.Binary.csproj
@@ -44,6 +44,9 @@
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyVersion.cs">
+      <Link>Properties\SharedAssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="BinaryDecoder.cs" />
     <Compile Include="BinaryEncoder.cs" />
     <Compile Include="BinaryLocationDecoder.cs" />
