--- a/OpenLR.XML/OpenLR.XML.csproj
+++ b/OpenLR.XML/OpenLR.XML.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyVersion.cs">
+      <Link>Properties\SharedAssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="DATEXIISchema_1_0_1_0_HDT_HDF.cs">
       <DependentUpon>DATEXIISchema_1_0_1_0_HDT_HDF.XSD</DependentUpon>
     </Compile>
