Finished basic encoding decoding MultiNet and NWB for PointAlongLong.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\OpenLR.OsmSharp.MultiNet\packages.config" />
+  <repository path="..\OpenLR.OsmSharp.NWB\packages.config" />
   <repository path="..\OpenLR.OsmSharp\packages.config" />
   <repository path="..\OpenLR.Tests\packages.config" />
 </repositories>
