--- a/OpenLR.Tests/OpenLR.Tests.csproj
+++ b/OpenLR.Tests/OpenLR.Tests.csproj
@@ -127,15 +127,19 @@
     <Compile Include="Binary\PolygonLocationTests.cs" />
     <Compile Include="Binary\RectangleLocationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Referenced\Real\RealGraphOsm.cs" />
-    <Compile Include="Referenced\Real\RealReferencedDecoderTests.cs" />
-    <Compile Include="Referenced\ReferencedPointAlongLineDecoderTests.cs" />
-    <Compile Include="Referenced\ReferencedPointAlongLineEncoderTests.cs" />
+    <Compile Include="Referenced\MultiNet\ReferencedPointAlongLineDecoderTests.cs" />
+    <Compile Include="Referenced\MultiNet\ReferencedPointAlongLineEncoderTests.cs" />
+    <Compile Include="Referenced\NWB\ReferencedPointAlongLineDecoderTests.cs" />
+    <Compile Include="Referenced\NWB\ReferencedPointAlongLineEncoderTests.cs" />
+    <Compile Include="Referenced\Real\Osm\RealGraphOsm.cs" />
+    <Compile Include="Referenced\Real\Osm\RealReferencedDecoderTests.cs" />
+    <Compile Include="Referenced\Osm\ReferencedPointAlongLineDecoderTests.cs" />
+    <Compile Include="Referenced\Osm\ReferencedPointAlongLineEncoderTests.cs" />
     <Compile Include="Referenced\ReferencedPolygonDecoderTests.cs" />
     <Compile Include="Referenced\ReferencedGridDecoderTests.cs" />
     <Compile Include="Referenced\ReferencedCircleDecoderTests.cs" />
     <Compile Include="Referenced\ReferencedGeoCoordinateDecoderTests.cs" />
-    <Compile Include="Referenced\ReferencedLineDecoderTests.cs" />
+    <Compile Include="Referenced\Osm\ReferencedLineDecoderTests.cs" />
     <Compile Include="Referenced\ReferencedRectangleDecoderTests.cs" />
     <Compile Include="XmlSerializerTests.cs" />
   </ItemGroup>
@@ -143,6 +147,14 @@
     <ProjectReference Include="..\OpenLR.Binary\OpenLR.Binary.csproj">
       <Project>{252d884c-8bed-4711-a2da-21f8dc05d697}</Project>
       <Name>OpenLR.Binary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\OpenLR.OsmSharp.MultiNet\OpenLR.OsmSharp.MultiNet.csproj">
+      <Project>{1130c7f7-c993-4669-9b93-010c9bbade1c}</Project>
+      <Name>OpenLR.OsmSharp.MultiNet</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\OpenLR.OsmSharp.NWB\OpenLR.OsmSharp.NWB.csproj">
+      <Project>{e14b6468-c422-4811-828e-bcf522266eff}</Project>
+      <Name>OpenLR.OsmSharp.NWB</Name>
     </ProjectReference>
     <ProjectReference Include="..\OpenLR.OsmSharp\OpenLR.OsmSharp.csproj">
       <Project>{61c1f8e2-9afb-4eda-8465-b0ecb20296d7}</Project>
