Implemented and tests NWB mapping table.

--- a/OpenLR.OsmSharp.NWB/OpenLR.OsmSharp.NWB.csproj
+++ b/OpenLR.OsmSharp.NWB/OpenLR.OsmSharp.NWB.csproj
@@ -89,6 +89,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NWBMapping.cs" />
     <Compile Include="ReferencedNWBDecoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReferencedNWBEncoder.cs" />
