Implemented a match and scoring algorithm to compare FOW and FRC.

--- a/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
+++ b/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Decoding\Scoring\CombinedScoreComparer.cs" />
     <Compile Include="Decoding\Scoring\CombinedScore.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Matching\MatchScoring.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReferencedDecoderBase.cs" />
     <Compile Include="ReferencedDecodingException.cs" />
