Updated OsmSharp and OsmSharp.Routing.Shape.

--- a/OpenLR.OsmSharp.MultiNet/packages.config
+++ b/OpenLR.OsmSharp.MultiNet/packages.config
@@ -3,6 +3,6 @@
   <package id="GeoAPI" version="1.7.2" targetFramework="net45" />
   <package id="NetTopologySuite" version="1.13.2" targetFramework="net45" />
   <package id="NetTopologySuite.IO.GeoTools" version="1.13.2" targetFramework="net45" />
-  <package id="OsmSharp" version="4.2.0.754" targetFramework="net45" />
-  <package id="OsmSharp.Routing.Shape" version="0.1.0.9" targetFramework="net45" />
+  <package id="OsmSharp" version="4.2.0.850-beta" targetFramework="net45" />
+  <package id="OsmSharp.Routing.Shape" version="0.1.0.13" targetFramework="net45" />
 </packages>
