Added code to find a new valid vertex from an invalid one.

--- a/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
+++ b/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
@@ -121,6 +121,7 @@
     <Compile Include="ReferencedEncoderBase.cs" />
     <Compile Include="Osm\ReferencedOsmDecoder.cs" />
     <Compile Include="Osm\ReferencedOsmEncoder.cs" />
+    <Compile Include="ReferencedEncoderBaseLiveEdge.cs" />
     <Compile Include="ReferencedEncodingException.cs" />
     <Compile Include="Router\BasicRouter.cs" />
   </ItemGroup>
