--- a/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
+++ b/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Matching\MatchScoring.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReferencedDecoderBase.cs" />
+    <Compile Include="ReferencedDecoderBaseLiveEdge.cs" />
     <Compile Include="ReferencedDecodingException.cs" />
     <Compile Include="ReferencedEncoderBase.cs" />
     <Compile Include="Osm\ReferencedOsmDecoder.cs" />
