Partial fix of the circular path problem.

--- a/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
+++ b/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
@@ -126,6 +126,7 @@
     <Compile Include="ReferencedEncodingException.cs" />
     <Compile Include="Router\BasicRouter.cs" />
     <Compile Include="Router\BasicRouterDataSource.cs" />
+    <Compile Include="Router\PathSegment.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
