--- a/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
+++ b/OpenLR.OsmSharp/OpenLR.OsmSharp.csproj
@@ -121,6 +121,10 @@
     <Compile Include="Router\BasicRouter.cs" />
     <Compile Include="Router\BasicRouterDataSource.cs" />
     <Compile Include="Router\PathSegment.cs" />
+    <Compile Include="Scoring\AddedScore.cs" />
+    <Compile Include="Scoring\MultipliedScore.cs" />
+    <Compile Include="Scoring\Score.cs" />
+    <Compile Include="Scoring\SimpleScore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
