--- a/OpenLR.OsmSharp.NWB/packages.config
+++ b/OpenLR.OsmSharp.NWB/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr3.Runtime.PCL" version="3.5.0.2" targetFramework="net45" />
   <package id="GeoAPI" version="1.7.2" targetFramework="net45" />
   <package id="NetTopologySuite" version="1.13.2" targetFramework="net45" />
   <package id="NetTopologySuite.IO.GeoTools" version="1.13.2" targetFramework="net45" />
-  <package id="OsmSharp" version="4.2.0.850-beta" targetFramework="net45" />
-  <package id="OsmSharp.Routing.Shape" version="0.1.0.13" targetFramework="net45" />
+  <package id="OsmSharp" version="4.3.0.940-beta" targetFramework="net45" />
+  <package id="OsmSharp.Routing.Shape" version="0.1.0.24-beta" targetFramework="net45" />
+  <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
+  <package id="Zlib.Portable" version="1.9.2" targetFramework="net45" />
 </packages>
